[package]
name = "dungeon-dash"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
turbo = { version = "1.6.0-alpha.13", package = "turbo-genesis-sdk", path = "/Users/jozanza/github/turbo-genesis-sdk" }

[lib]
crate-type = ["cdylib"]
